...

  const favoritesTabOptions = {
    tabBarLabel: 'Saved',
    tabBarIcon: ({color}: {color: string}) => (
      <MaterialCommunityIcons name="heart" color={color} size={20} />
    ),
    tabBarTestIDs: 'saveTab',
  };

  const profileTabOptions = {
    tabBarLabel: 'Profile',
    tabBarIcon: ({color}: {color: string}) => (
      <MaterialCommunityIcons name="account" color={color} size={20} />
...
          component={Profile}
          options={{tabBarButtonTestID: 'profileTab', ...profileTabOptions}}
        />
        <Tab.Screen
          name="Nearest"
          component={NearestScreen}
          options={{tabBarButtonTestID: 'nearestTab', ...NearestTabOptions}}
        />
      </Tab.Navigator>
    </View>
  );
};

...
