...
  useEffect(() => {
    fetchSavedCoupons();
  }, []);

  return (
    <View style={{flex: 1}}>
      <ScrollView style={{flex: 1}} testID="savedCouponList">
        {savedCoupons.map(coupon => (
          <Card key={coupon.id} style={{margin: 10}}>
            <Card.Content>
              <Title>{coupon.name}</Title>
              <Paragraph>{coupon.description}</Paragraph>
              <Text>
...
