...
    }
  }, [nearestCoupons]);
  // -------------------------------------------------------This is the main logic for the simulation-------------------------------------------------------

  return (
    <View style={{flex: 1}}>
      <ScrollView style={{flex: 1}} testID="couponList">
        {/*FR - 12: 12.2 Coupon display*/}
        {coupons.map(coupon => (
          <Card key={coupon.id} style={{margin: 10}}>
            <Card.Content>
              <Title>{coupon.name}</Title>
              <Paragraph>{coupon.description}</Paragraph>
...
            padding: 20,
            borderRadius: 10,
          }}>
          <Text>Promotion: {promoname}</Text>
          <Text testID={promocode}>Promo code: {promocode}</Text>
          <Button
            testID="closePopupButton"
            onPress={() => setPopupVisible(false)}>
            Close
          </Button>
        </Modal>
      </Portal>
    </View>
...
