...
      })
      .filter(coupon => coupon !== undefined) as SimCoupon[];

    if (uniqueCoupons.length != 0) {
      return (
        <View style={{flex: 1}}>
          <ScrollView testID="nearbyCouponList" style={{flex: 1}}>
            {uniqueCoupons.map(coupon => (
              <Card key={coupon.id} style={{margin: 10}}>
                <Card.Content>
                  <Title>{coupon.name}</Title>
                  <Paragraph>{coupon.description}</Paragraph>
                  <Text>
...
